# pydantic-example

./: README.md  act-installation.md  check_format.yml  custom_validator.py  main.py  requirements.txt
.github/: git-runner.md
.github/workflows/: check_format.yml  run_tests.yml  run_tests_poetry.yml
pydantic-service/: README.md  custom_validator.py  pyproject.toml
pydantic-service/tests/: README.md
tests/: test_custom_validator.py  test_main.py
