[tool.poetry]
name = "pydantic-service"
version = "0.1.0"
description = ""
authors = ["kovidd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.2"
icecream = "^2.1.3"
pydantic = {extras = ["email"], version = "^2.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
